# boyfriend

./: .gitignore  Cargo.toml  README.md
src/: asm.rs  chunk_list.rs  cranelift.rs  interpret.rs  ir.rs  main.rs
tests/adv/: adv  adv.asm
tests/gol/: gol  gol.asm
tests/life/: README.txt
tests/lost_kingdom/: README.txt  lost_kingdom  lost_kingdom.asm
tests/mandel/: mandel  mandel.asm
tests/mandelbrot/: README.txt
tests/tic_tac_toe/: README.txt
