[package]
name = "boyfriend"
version = "0.2.0"
edition = "2024"
description = "an optimizing brainf*ck compiler"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
cranelift = { version = "0.118.0", optional = true, features = ["jit", "module", "native", "object"] }
indoc = "2.0.6"
memchr = "2.7.4"

[features]
cranelift = ["dep:cranelift"]
